--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "nodeexpressbabel",
   "version": "1.0.0",
   "description": "Node Express and Babel",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d dist",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build && nodemon dist/server.js",
+    "serve": "npm run build && node dist/server.js"
   },
   "keywords": [
     "Node",
@@ -16,11 +19,9 @@
   "author": "Kris Marks",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^1.18.10"
   },
   "dependencies": {
     "bcrypt": "^3.0.4",
